--- a/okta-dotnet-saml/package.json
+++ b/okta-dotnet-saml/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aspnet-webpack": "^3.0.0",
+    "aspnet-webpack-react": "^3.0.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -41,6 +43,7 @@
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
