Cleaning up code, adding a section to appsettings.json for SAML configuration and X509 certificate installation location.

--- a/okta-dotnet-saml/appsettings.json
+++ b/okta-dotnet-saml/appsettings.json
@@ -3,5 +3,13 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "SAML": {
+    "Redirect_Url": "https://fast.okta.com/app/fasttechnology_oktadotnetsaml_1/exk1m1hhntCbsCO0H2p7/sso/saml",
+    "X509": {
+      "IssuerName": "Okta",
+      "StoreName": "TrustedPublisher",
+      "StoreLocation": "LocalMachine"
+    }
   }
 }
